--- a/config/database.yml
+++ b/config/database.yml
@@ -11,8 +11,7 @@ development:
 test: &test
   adapter: postgresql
   encoding: unicode
-  database: energyai_development
-  #database: energyai_test
+  database: energyai_test
   pool: 5
   username: 
   password:
